--- a/src/components/Punto.astro
+++ b/src/components/Punto.astro
@@ -4,6 +4,21 @@ import '../styles/punto.css'
 
 <div>
     <script src="../scripts/punto.ts"></script>
-    <table id="punto-grid">
-    </table>
+    <div class="punto-container">
+            <div class="punto-title">
+                <h1>Punto Game</h1>
+            </div>
+            <div class="punto-card">
+                <p>
+                    Card to play
+                </p>
+                <div id="card-to-play">
+                    color
+                </div>
+            </div>
+            <div class="punto-grid-container">
+                <table id="punto-grid">
+                </table>
+            </div>
+    </div>
 </div>
